fix: finished reverting record_name to recordName
