# openapi3.yaml
@@ -41,10 +41,10 @@ paths:
                   summary: Some records
                   value:
                     - id: 123
-                      record_name: rec_A
+                      recordName: rec_A
                       username: username
-                      authorized_by: john_doe
-                      authorized_at: '2026-02-04T16:26:18.055Z'
+                      authorizedBy: john_doe
+                      authorizedAt: '2026-02-04T16:26:18.055Z'
                       data:
                         kuku: 'kuku random data'
         '400':
@@ -74,14 +74,14 @@ paths:
                     message: 'Internal server error, please try again later'
                     code: 'INTERNAL_ERROR'
 
-  /records/{record_name}:
+  /records/{recordName}:
     get:
       tags:
         - records
       summary: Get extractable record by record name
       operationId: getRecord
       parameters:
-        - name: record_name
+        - name: recordName
           in: path
           required: true
           schema:
@@ -98,10 +98,10 @@ paths:
                   summary: Record exists
                   value:
                     id: 123
-                    record_name: rec_A
+                    recordName: rec_A
                     username: username
-                    authorized_by: john_doe
-                    authorized_at: '2026-02-04T16:26:18.055Z'
+                    authorizedBy: john_doe
+                    authorizedAt: '2026-02-04T16:26:18.055Z'
                     data:
                       kuku: 'kuku random data'
         '404':
@@ -137,7 +137,7 @@ paths:
       summary: Create extractable record
       operationId: createRecord
       parameters:
-        - name: record_name
+        - name: recordName
           in: path
           required: true
           schema:
@@ -151,13 +151,13 @@ paths:
               required:
                 - username
                 - password
-                - authorized_by
+                - authorizedBy
               properties:
                 username:
                   type: string
                 password:
                   type: string
-                authorized_by:
+                authorizedBy:
                   type: string
                   description: 'User authorizing this record creation'
                 data:
@@ -176,10 +176,10 @@ paths:
                   summary: Record created
                   value:
                     id: 123
-                    record_name: rec_A
+                    recordName: rec_A
                     username: username
-                    authorized_by: john_doe
-                    authorized_at: '2026-02-04T16:26:18.055Z'
+                    authorizedBy: john_doe
+                    authorizedAt: '2026-02-04T16:26:18.055Z'
                     data:
                       kuku: 'kuku random data'
         '400':
@@ -241,7 +241,7 @@ paths:
       summary: Delete extractable record
       operationId: deleteRecord
       parameters:
-        - name: record_name
+        - name: recordName
           in: path
           required: true
           schema:
@@ -255,13 +255,13 @@ paths:
               required:
                 - username
                 - password
-                - authorized_by
+                - authorizedBy
               properties:
                 username:
                   type: string
                 password:
                   type: string
-                authorized_by:
+                authorizedBy:
                   type: string
                   description: 'User authorizing this deletion'
       responses:
@@ -367,10 +367,10 @@ paths:
                 $ref: '#/components/schemas/validateResponse'
               examples:
                 missing_fields:
-                  summary: Missing credentials or record_name
+                  summary: Missing credentials or recordName
                   value:
                     isValid: false
-                    message: 'Username, password, and record_name are required'
+                    message: 'Username, password, and recordName are required'
                     code: 'MISSING_CREDENTIALS'
         '404':
           description: Validation error – already exists
@@ -380,7 +380,7 @@ paths:
                 $ref: '#/components/schemas/validateResponse'
               examples:
                 missing_fields:
-                  summary: Inappropriate record_name
+                  summary: Inappropriate recordName
                   value:
                     isValid: false
                     message: "Record 'rec_name' already exists"
@@ -446,10 +446,10 @@ paths:
                 $ref: '#/components/schemas/validateResponse'
               examples:
                 missing_fields:
-                  summary: Missing credentials or record_name
+                  summary: Missing credentials or recordName
                   value:
                     isValid: false
-                    message: 'Username, password, and record_name are required'
+                    message: 'Username, password, and recordName are required'
                     code: 'MISSING_CREDENTIALS'
         '404':
           description: Validation error – doesn't exists
@@ -459,7 +459,7 @@ paths:
                 $ref: '#/components/schemas/validateResponse'
               examples:
                 missing_fields:
-                  summary: Inappropriate record_name
+                  summary: Inappropriate recordName
                   value:
                     isValid: false
                     message: "Record 'rec_name' doesn't exists"
@@ -478,19 +478,19 @@ paths:
                     message: 'Internal server error, please try again later'
                     code: 'INTERNAL_ERROR'
 
-  /audit/{record_name}:
+  /audit/{recordName}:
     get:
       tags:
         - audit_logs
       summary: Get all audit logs by record name
       operationId: getAudit
       parameters:
-        - name: record_name
+        - name: recordName
           in: path
           required: true
           schema:
             type: string
-          description: The record_name to fetch audit logs for
+          description: The recordName to fetch audit logs for
       responses:
         '200':
           description: List of audit logs for the record (empty array if none found)
@@ -505,32 +505,32 @@ paths:
                   summary: Audit logs exist
                   value:
                     - id: 1
-                      record_name: rec_A
+                      recordName: rec_A
                       username: username
-                      authorized_by: john_doe
+                      authorizedBy: john_doe
                       action: 'CREATE'
-                      authorized_at: '2026-02-04T16:26:18.055Z'
+                      authorizedAt: '2026-02-04T16:26:18.055Z'
                     - id: 2
-                      record_name: rec_A
+                      recordName: rec_A
                       username: username
-                      authorized_by: jane_doe
+                      authorizedBy: jane_doe
                       action: 'DELETE'
-                      authorized_at: '2026-02-05T16:26:18.055Z'
+                      authorizedAt: '2026-02-05T16:26:18.055Z'
                 empty:
                   summary: No audit logs
                   value: []
         '400':
-          description: Invalid record_name or request parameters
+          description: Invalid recordName or request parameters
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/validateResponse'
               examples:
                 invalid_format:
-                  summary: Invalid record_name
+                  summary: Invalid recordName
                   value:
                     isValid: false
-                    message: 'Invalid record_name provided'
+                    message: 'Invalid recordName provided'
                     code: 'MISSING_CREDENTIALS'
         '500':
           description: Internal server error
@@ -650,32 +650,32 @@ components:
       required:
         - username
         - password
-        - record_name
+        - recordName
       properties:
         username:
           type: string
         password:
           type: string
-        record_name:
+        recordName:
           type: string
 
     extractable-record:
       type: object
       required:
         - id
-        - record_name
-        - authorized_by
+        - recordName
+        - authorizedBy
       properties:
         id:
           type: integer
           format: int64
-        record_name:
+        recordName:
           type: string
         username:
           type: string
-        authorized_by:
+        authorizedBy:
           type: string
-        authorized_at:
+        authorizedAt:
           type: string
         data:
           type: object
@@ -686,21 +686,21 @@ components:
       type: object
       required:
         - id
-        - record_name
-        - authorized_by
+        - recordName
+        - authorizedBy
         - action
       properties:
         id:
           type: integer
           format: int64
-        record_name:
+        recordName:
           type: string
         username:
           type: string
-        authorized_by:
+        authorizedBy:
           type: string
         action:
           type: string
           enum: [CREATE, DELETE]
-        authorized_at:
+        authorizedAt:
           type: string
