# src/audit_logs/controllers/auditController.ts
@@ -19,16 +19,16 @@ export class AuditController {
     this.logContext = { fileName: __filename, class: AuditController.name };
   }
 
-  public getAudit: TypedRequestHandlers['GET /audit/{record_name}'] = async (req, res) => {
+  public getAudit: TypedRequestHandlers['GET /audit/{recordName}'] = async (req, res) => {
     const logContext = { ...this.logContext, function: this.getAudit.name };
-    const { record_name } = req.params;
+    const { recordName } = req.params;
 
     try {
-      const records = await this.manager.getAuditLogs(record_name);
+      const records = await this.manager.getAuditLogs(recordName);
 
       return res.status(httpStatus.OK).json(records);
     } catch (err) {
-      this.logger.error({ msg: 'Unexpected error getting record', record_name, err, logContext });
+      this.logger.error({ msg: 'Unexpected error getting record', recordName, err, logContext });
       return res.status(httpStatus.INTERNAL_SERVER_ERROR).json({ isValid: false, message: 'Failed to get audit logs', code: 'INTERNAL_ERROR' });
     }
   };
